# hikvision_ey

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_SUMMARY.md  README.md  hacs.json  info.md  pyproject.toml
.github/workflows/: test.yml  validate.yml
custom_components/hikvision_ey/: __init__.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  sensor.py  services.py  services.yaml  strings.json
custom_components/hikvision_ey/api/: __init__.py  client.py  endpoints.py  exceptions.py  isapi.py  models.py  unlock_strategies.py
custom_components/hikvision_ey/translations/: en.json  it.json
tests/: __init__.py  conftest.py  test_client.py  test_config_flow.py  test_coordinator.py  test_services.py  test_strategy_verified.py  test_unlock_strategies.py
