[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hikvision-ey"
version = "0.3.5"
description = "Home Assistant custom integration for Hikvision EY-series video intercom (DS-KV74xx EY, DS-KH7300EY, DS-KAD7063)"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Matteo Aldi", email = "matteo@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "homeassistant>=2025.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-homeassistant-custom-component>=0.13",
    "ruff>=0.4",
    "black>=24.0",
    "aioresponses>=0.7",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in classmethod
    "S101",    # Use of assert detected (needed for tests)
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["custom_components.hikvision_ey"]

[tool.black]
target-version = ["py313"]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=custom_components/hikvision_ey --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["custom_components/hikvision_ey"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
